fixed errors caused due to upgrading to latest react, fixed chart clipping due to chart icons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -526,7 +526,8 @@ img {
 
 .chart-title-icons{
     display: inline-block;
-    float: right;
+    position: absolute;
+    right: 10px;
 
 }
 .chart-title-icons svg{
